--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "strict": true,
-    "module": "commonjs",
     "target": "es6",
     "esModuleInterop": true,
     "sourceMap": true,
@@ -9,6 +8,7 @@
     "typeRoots": ["node_modules/@types"],
     "outDir": "./dist",
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": false,
+    "types": ["chrome", "node"]
   }
 }
