--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
   "manifest_version": 3,
-  "name": "Styl Chrome Extension",
+  "name": "Styl Extension",
   "description": "Manage page styles using templates with CSS injection",
   "version": "0.0.1",
   "icons": {},
+  "action": {},
   "side_panel": {
-    "default_path": "src/sidepanel/index.html",
+    "default_path": "src/sidepanel/sidepanel.html",
     "openPanelOnActionClick": true
   },
   "permissions": [
@@ -14,18 +15,21 @@
     "webRequest",
     "contextMenus",
     "storage",
-    "sidePanel"
+    "sidePanel",
+    "debugger",
+    "scripting"
   ],
-  "host_permissions": ["*://*/*"],
+  "host_permissions": ["<all_urls>"],
   "background": {
-    "service_worker": "dist/src/shared/service_worker.js"
+    "service_worker": "dist/background.js"
   },
   "content_scripts": [
     {
       "run_at": "document_start",
-      "js": ["dist/src/inject/content_script.js"],
+      "js": ["dist/content_script.js"],
       "matches": ["<all_urls>"],
       "all_frames": true,
+      "match_about_blank": true,
       "persistent": true
     }
   ]
