--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "webpack.config.ts",
   "scripts": {
-    "start": "webpack --mode development",
-    "build": "webpack --mode production && tsc"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode production --watch"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@babel/register": "^7.25.9",
     "@types/chrome": "^0.0.283",
+    "@types/dotenv-webpack": "^7.0.8",
     "@types/node": "^22.9.1",
     "@types/sanitize-html": "^2.13.0",
     "@types/webpack-dev-server": "^4.7.1",
@@ -24,11 +25,10 @@
     "sanitize-html": "^2.13.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "dexie": "^4.0.10"
+    "dexie": "^4.0.10",
+    "dotenv-webpack": "^8.1.0"
   }
 }
